WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23910
REGRESSION: In Full page mode, movie controller hides when I drag the knob if movie is playing
https://bugs.webkit.org/show_bug.cgi?id=23910
Summary
REGRESSION: In Full page mode, movie controller hides when I drag the knob if...
Adele Peterson
Reported
2009-02-11 17:46:54 PST
In Full page mode, movie controller hides when I drag the knob if movie is playing. When the scroller thumb captures mouse events, RenderMedia should not treat the event as a real mouseOut.
Attachments
patch
(2.01 KB, patch)
2009-02-11 17:52 PST
,
Adele Peterson
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adele Peterson
Comment 1
2009-02-11 17:48:25 PST
Here's an example to test with:
http://pulsar.esm.psu.edu/Faculty/Gray/graphics/movies/iMac2Go.mov
Adele Peterson
Comment 2
2009-02-11 17:52:41 PST
Created
attachment 27583
[details]
patch
Adele Peterson
Comment 3
2009-02-11 21:06:33 PST
Committed revision 40885.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug